--- a/templates/Caddyfile
+++ b/templates/Caddyfile
@@ -30,6 +30,8 @@ periph.io {
     X-Content-Type-Options "nosniff"
     # Disallow the site to be rendered within a frame (clickjacking protection)
     X-Frame-Options "DENY"
+    # Tell clients to cache for 1 hour.
+    Cache-Control "public, max-age=3600"
   }
 
   header /x/ {
