--- a/Caddyfile
+++ b/Caddyfile
@@ -44,6 +44,8 @@ periph.io {
     X-Content-Type-Options "nosniff"
     # Disallow the site to be rendered within a frame (clickjacking protection)
     X-Frame-Options "DENY"
+    # https://developers.google.com/web/fundamentals/security/csp/
+    Content-Security-Policy "default-src 'self'; child-src 'none'; object-src 'none'; style-src 'self' fonts.googleapis.com; font-src fonts.gstatic.com; script-src 'self' www.google-analytics.com 'sha256-9Jc8Q6ZFBNSSdoUH1yWlYlj8+foOU1+I+GKK/QHnTwE='; img-src 'self' godoc.org www.google-analytics.com; block-all-mixed-content"
     # Tell clients to cache for 1 hour.
     Cache-Control "public, max-age=3600"
   }
