--- a/resources/periph.io.conf
+++ b/resources/periph.io.conf
@@ -1,4 +1,5 @@
 # Example Caddyfile
+# See https://caddyserver.com/docs for more information.
 
 www.periph.io {
   log / /var/log/caddy/www.periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
@@ -76,27 +77,4 @@ periph.io {
   }
 
   templates /templates/gopkg.tpl
-}
-
-ci.periph.io {
-  log / /var/log/caddy/ci.periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
-    rotate {
-      size 100 # Rotate after 100 MB
-      age  120 # Keep log files for 120 days
-      keep 100 # Keep at most 100 log files
-    }
-  }
-  errors {
-    log /var/log/caddy/ci.periph.io.err {
-      size 100 # Rotate after 100 MB
-      age  120 # Keep log files for 120 days
-      keep 100 # Keep at most 100 log files
-    }
-  }
-
-  # webhooks for gohci look like this.
-  #proxy /github/periph/device 127.0.0.1:1234 {
-  #  transparent
-  #  without /github/periph/device
-  #}
 }
