--- a/resources/periph.io.conf
+++ b/resources/periph.io.conf
@@ -46,7 +46,9 @@ periph.io {
     # Disallow the site to be rendered within a frame (clickjacking protection)
     X-Frame-Options "DENY"
     # https://developers.google.com/web/fundamentals/security/csp/
-    Content-Security-Policy "default-src 'self'; child-src 'none'; object-src 'none'; style-src 'self' fonts.googleapis.com; font-src fonts.gstatic.com; script-src 'self' www.google-analytics.com 'sha256-9Jc8Q6ZFBNSSdoUH1yWlYlj8+foOU1+I+GKK/QHnTwE='; img-src 'self' godoc.org www.google-analytics.com; block-all-mixed-content"
+    # - google analytics inline script: 'sha256-9Jc8Q6ZFBNSSdoUH1yWlYlj8+foOU1+I+GKK/QHnTwE='
+    # - minified google analytics inline script: 'sha256-ozOS2PBmvzhDazZdv3aaHCg13uV6+PTRLyHB+Gw0Bqo='
+    Content-Security-Policy "default-src 'self'; child-src 'none'; object-src 'none'; style-src 'self' fonts.googleapis.com; font-src fonts.gstatic.com; script-src 'self' 'sha256-9Jc8Q6ZFBNSSdoUH1yWlYlj8+foOU1+I+GKK/QHnTwE=' 'sha256-ozOS2PBmvzhDazZdv3aaHCg13uV6+PTRLyHB+Gw0Bqo=' www.google-analytics.com; img-src 'self' godoc.org www.google-analytics.com; block-all-mixed-content"
     # Tell clients to cache for 1 hour.
     Cache-Control "public, max-age=3600"
   }
