--- a/resources/periph.io.conf
+++ b/resources/periph.io.conf
@@ -46,9 +46,9 @@ periph.io {
     # Disallow the site to be rendered within a frame (clickjacking protection)
     X-Frame-Options "DENY"
     # https://developers.google.com/web/fundamentals/security/csp/
-    # - google analytics inline script: 'sha256-9Jc8Q6ZFBNSSdoUH1yWlYlj8+foOU1+I+GKK/QHnTwE='
+    # - minified gopkg.tpl: 'sha256-bF3pFffUDQjEfKSNTMmzWYizjWm0yMQi4JYEIHVHVyQ='
     # - minified google analytics inline script: 'sha256-ozOS2PBmvzhDazZdv3aaHCg13uV6+PTRLyHB+Gw0Bqo='
-    Content-Security-Policy "default-src 'self'; child-src 'none'; object-src 'none'; style-src 'self' fonts.googleapis.com; font-src fonts.gstatic.com; script-src 'self' 'sha256-9Jc8Q6ZFBNSSdoUH1yWlYlj8+foOU1+I+GKK/QHnTwE=' 'sha256-ozOS2PBmvzhDazZdv3aaHCg13uV6+PTRLyHB+Gw0Bqo=' www.google-analytics.com; img-src 'self' godoc.org www.google-analytics.com; block-all-mixed-content"
+    Content-Security-Policy "default-src 'self'; child-src 'none'; object-src 'none'; style-src 'self' fonts.googleapis.com; font-src fonts.gstatic.com; script-src 'self' 'sha256-bF3pFffUDQjEfKSNTMmzWYizjWm0yMQi4JYEIHVHVyQ=' 'sha256-ozOS2PBmvzhDazZdv3aaHCg13uV6+PTRLyHB+Gw0Bqo=' www.google-analytics.com; img-src 'self' godoc.org www.google-analytics.com; block-all-mixed-content"
     # Tell clients to cache for 1 hour.
     Cache-Control "public, max-age=3600"
   }
@@ -62,7 +62,7 @@ periph.io {
   }
 
   rewrite /x/ {
-    to /templates/gopkg.tpl?path={path}
+    to /templates/gopkg.tpl?path={path}&{query}
   }
 
   root periph.io/root
