Switch to use marcaruel/hugo-tidy docker image

--- a/resources/periph.io.conf
+++ b/resources/periph.io.conf
@@ -65,7 +65,7 @@ periph.io {
     to /templates/gopkg.tpl?path={path}&{query}
   }
 
-  root periph.io/root
+  root periph.io/www
 
   git https://github.com/periph/website .. {
     hook /api/update/website <ADD SECRET HERE>
