Update resources with more configs
Add everything needed to run on container-os on GCE.

--- a/resources/periph.io.conf
+++ b/resources/periph.io.conf
@@ -2,7 +2,7 @@
 # See https://caddyserver.com/docs for more information.
 
 www.periph.io {
-  log / /var/log/caddy/www.periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
+  log / logs/www.periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
     rotate {
       size 100 # Rotate after 100 MB
       age  120 # Keep log files for 120 days
@@ -20,7 +20,7 @@ www.periph.io {
 }
 
 periph.io {
-  log / /var/log/caddy/periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
+  log / logs/periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
     rotate {
       size 100 # Rotate after 100 MB
       age  120 # Keep log files for 120 days
@@ -67,15 +67,17 @@ periph.io {
 
   root periph.io/www
 
-  git https://github.com/periph/website .. {
+  git {
+    repo https://github.com/periph/website
+    path ../
+    # No need to poll with a hook:
+    interval -1
     hook /api/update/website <ADD SECRET HERE>
-    then ./gen.sh
-  }
-
-  # As periph.io/periph
-  git ...periph periph {
-    hook /api/update/periph <ADD SECRET HERE>
-    then ./gen.sh
+    # It takes less than 2 seconds to complete so do it inline.
+    # $(id -g) cannot be used here. 1000 is chronos.
+    # Path given to -v must be absolute, not relative.
+    # See https://github.com/maruel/hugo-tidy#usage
+    then docker run --rm -u 1000:1000 -v /var/lib/docker/web/periph.io:/data marcaruel/hugo-tidy:hugo-0.19-alpine-3.4-pygments-2.2.0
   }
 
   templates /templates/gopkg.tpl
