Path fixes from previous commit

--- a/resources/periph.io.conf
+++ b/resources/periph.io.conf
@@ -10,7 +10,7 @@ www.periph.io {
     }
   }
   errors {
-    log /var/log/caddy/www.periph.io.err {
+    log logs/www.periph.io.err {
       size 100 # Rotate after 100 MB
       age  120 # Keep log files for 120 days
       keep 100 # Keep at most 100 log files
@@ -28,7 +28,7 @@ periph.io {
     }
   }
   errors {
-    log /var/log/caddy/periph.io.err {
+    log logs/periph.io.err {
       size 100 # Rotate after 100 MB
       age  120 # Keep log files for 120 days
       keep 100 # Keep at most 100 log files
