--- a/resources/periph.io.conf
+++ b/resources/periph.io.conf
@@ -48,7 +48,7 @@ periph.io {
     # https://developers.google.com/web/fundamentals/security/csp/
     # - minified gopkg.tpl: 'sha256-KDCrUP5xASFaYcxMcBhOpFlWyjbuaQWhLkvmuds8xzI='
     # - minified google analytics inline script: 'sha256-ozOS2PBmvzhDazZdv3aaHCg13uV6+PTRLyHB+Gw0Bqo='
-    Content-Security-Policy "default-src 'self'; child-src 'none'; object-src 'none'; style-src 'self' fonts.googleapis.com; font-src fonts.gstatic.com; script-src 'self' 'sha256-KDCrUP5xASFaYcxMcBhOpFlWyjbuaQWhLkvmuds8xzI=' 'sha256-ozOS2PBmvzhDazZdv3aaHCg13uV6+PTRLyHB+Gw0Bqo=' www.google-analytics.com; img-src 'self' godoc.org raw.githubusercontent.com www.google-analytics.com; block-all-mixed-content"
+    Content-Security-Policy "default-src 'self'; child-src ghbtns.com; object-src 'none'; style-src 'self' fonts.googleapis.com; font-src fonts.gstatic.com; script-src 'self' 'sha256-KDCrUP5xASFaYcxMcBhOpFlWyjbuaQWhLkvmuds8xzI=' 'sha256-ozOS2PBmvzhDazZdv3aaHCg13uV6+PTRLyHB+Gw0Bqo=' www.google-analytics.com; img-src 'self' godoc.org raw.githubusercontent.com www.google-analytics.com; block-all-mixed-content"
     # Tell clients to cache for 1 hour.
     Cache-Control "public, max-age=3600"
   }
