Add support for Microsoft Edge
This requires migrating the two remaining inline scripts out of the html pages,
as whitelisting via sha256 is not yet supported.

I can't test locally so committing, then will update as needed.

--- a/resources/periph.io.conf
+++ b/resources/periph.io.conf
@@ -38,7 +38,7 @@ periph.io {
   header / {
     # Enable HTTP Strict Transport Security (HSTS) to force clients to always
     # connect via HTTPS (do not use if only testing)
-    Strict-Transport-Security "max-age=31536000;"
+    Strict-Transport-Security "max-age=31536000; includeSubDomains"
     # Enable cross-site filter (XSS) and tell browser to block detected attacks
     X-XSS-Protection "1; mode=block"
     # Prevent some browsers from MIME-sniffing a response away from the declared Content-Type
@@ -46,9 +46,12 @@ periph.io {
     # Disallow the site to be rendered within a frame (clickjacking protection)
     X-Frame-Options "DENY"
     # https://developers.google.com/web/fundamentals/security/csp/
-    # - minified gopkg.tpl: 'sha256-KDCrUP5xASFaYcxMcBhOpFlWyjbuaQWhLkvmuds8xzI='
-    # - minified google analytics inline script: 'sha256-ozOS2PBmvzhDazZdv3aaHCg13uV6+PTRLyHB+Gw0Bqo='
-    Content-Security-Policy "default-src 'self'; child-src ghbtns.com; object-src 'none'; style-src 'self' fonts.googleapis.com; font-src fonts.gstatic.com; script-src 'self' 'sha256-KDCrUP5xASFaYcxMcBhOpFlWyjbuaQWhLkvmuds8xzI=' 'sha256-ozOS2PBmvzhDazZdv3aaHCg13uV6+PTRLyHB+Gw0Bqo=' www.google-analytics.com; img-src 'self' godoc.org raw.githubusercontent.com www.google-analytics.com; block-all-mixed-content"
+    # - Edge doesn't support child-src, frame-src is.
+    # - Edge requires frame-src: data: for inline SVG, others don't.
+    # - Edge ignores block-all-mixed-content.
+    # - Edge (as of 2017-03-19) only supports CSP1 so it doesn't support sha256
+    #   whitelist.
+    Content-Security-Policy "default-src 'self'; child-src: ghbtns.com; frame-src data: ghbtns.com; object-src 'none'; style-src 'self' fonts.googleapis.com; font-src fonts.gstatic.com; script-src 'self' www.google-analytics.com; img-src 'self' godoc.org raw.githubusercontent.com www.google-analytics.com; block-all-mixed-content"
     # Tell clients to cache for 1 hour.
     Cache-Control "public, max-age=3600"
   }
