Fix small typo in previous CL
Beside that, everything went well. The only issue remaining on Internet Explorer
11 is the footer that is misplaced.

--- a/resources/periph.io.conf
+++ b/resources/periph.io.conf
@@ -51,7 +51,7 @@ periph.io {
     # - Edge ignores block-all-mixed-content.
     # - Edge (as of 2017-03-19) only supports CSP1 so it doesn't support sha256
     #   whitelist.
-    Content-Security-Policy "default-src 'self'; child-src: ghbtns.com; frame-src data: ghbtns.com; object-src 'none'; style-src 'self' fonts.googleapis.com; font-src fonts.gstatic.com; script-src 'self' www.google-analytics.com; img-src 'self' godoc.org raw.githubusercontent.com www.google-analytics.com; block-all-mixed-content"
+    Content-Security-Policy "default-src 'self'; child-src ghbtns.com; frame-src data: ghbtns.com; object-src 'none'; style-src 'self' fonts.googleapis.com; font-src fonts.gstatic.com; script-src 'self' www.google-analytics.com; img-src 'self' godoc.org raw.githubusercontent.com www.google-analytics.com; block-all-mixed-content"
     # Tell clients to cache for 1 hour.
     Cache-Control "public, max-age=3600"
   }
