Rewrite setup.sh
- Use group google-sudoers to make our life easier.
- Fix caddy download.
- Update hugo-tidy version in setup.sh.

--- a/resources/periph.io.conf
+++ b/resources/periph.io.conf
@@ -77,12 +77,15 @@ periph.io {
     interval -1
     hook /api/update/website <ADD SECRET HERE>
     # It takes less than 2 seconds to complete so do it inline.
-    # $(id -g) cannot be used here. 1000 is chronos.
+    #
+    # $(id -g) cannot be used here. 1000 is chronos. 1002 is google-sudoers
+    # TODO(maruel): This is brittle!
+    #
     # Path given to -v must be absolute, not relative.
     # See https://github.com/maruel/hugo-tidy#usage
     #
     # https://hub.docker.com/r/marcaruel/hugo-tidy/tags/
-    then docker run --rm -u 1000:1000 -v /var/lib/docker/web/periph.io:/data marcaruel/hugo-tidy:hugo-0.25.1-alpine-3.6-pygments-2.2.0
+    then docker run --rm -u 1000:1002 -v /var/lib/docker/web/periph.io:/data marcaruel/hugo-tidy:hugo-0.25.1-alpine-3.6-pygments-2.2.0
   }
 
   templates /templates/gopkg.tpl
