--- a/resources/periph.io.conf
+++ b/resources/periph.io.conf
@@ -3,36 +3,28 @@
 
 www.periph.io {
   log / logs/www.periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
-    rotate {
-      size 100 # Rotate after 100 MB
-      age  120 # Keep log files for 120 days
-      keep 100 # Keep at most 100 log files
-    }
+    rotate_size 100 # Rotate after 100 MB
+    rotate_age  120 # Keep log files for 120 days
+    rotate_keep 100 # Keep at most 100 log files
   }
-  errors {
-    log logs/www.periph.io.err {
-      size 100 # Rotate after 100 MB
-      age  120 # Keep log files for 120 days
-      keep 100 # Keep at most 100 log files
-    }
+  errors logs/www.periph.io.err {
+    rotate_size 100 # Rotate after 100 MB
+    rotate_age  120 # Keep log files for 120 days
+    rotate_keep 100 # Keep at most 100 log files
   }
   redir / https://periph.io{uri} 307
 }
 
 periph.io {
   log / logs/periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
-    rotate {
-      size 100 # Rotate after 100 MB
-      age  120 # Keep log files for 120 days
-      keep 100 # Keep at most 100 log files
-    }
+    rotate_size 100 # Rotate after 100 MB
+    rotate_age  120 # Keep log files for 120 days
+    rotate_keep 100 # Keep at most 100 log files
   }
-  errors {
-    log logs/periph.io.err {
-      size 100 # Rotate after 100 MB
-      age  120 # Keep log files for 120 days
-      keep 100 # Keep at most 100 log files
-    }
+  errors logs/periph.io.err {
+    rotate_size 100 # Rotate after 100 MB
+    rotate_age  120 # Keep log files for 120 days
+    rotate_keep 100 # Keep at most 100 log files
   }
 
   header / {
