Update ci.periph.io.conf for new caddy

--- a/resources/ci.periph.io.conf
+++ b/resources/ci.periph.io.conf
@@ -3,18 +3,14 @@
 
 ci.periph.io {
   log / /var/log/caddy/ci.periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
-    rotate {
-      size 100 # Rotate after 100 MB
-      age  120 # Keep log files for 120 days
-      keep 100 # Keep at most 100 log files
-    }
+    rotate_size 100 # Rotate after 100 MB
+    rotate_age  120 # Keep log files for 120 days
+    rotate_keep 100 # Keep at most 100 log files
   }
-  errors {
-    log /var/log/caddy/ci.periph.io.err {
-      size 100 # Rotate after 100 MB
-      age  120 # Keep log files for 120 days
-      keep 100 # Keep at most 100 log files
-    }
+  errors /var/log/caddy/ci.periph.io.err {
+    rotate_size 100 # Rotate after 100 MB
+    rotate_age  120 # Keep log files for 120 days
+    rotate_keep 100 # Keep at most 100 log files
   }
 
   header / {
