Fix typo in ci.periph.io.conf

--- a/resources/ci.periph.io.conf
+++ b/resources/ci.periph.io.conf
@@ -25,7 +25,7 @@ ci.periph.io {
     X-Frame-Options "DENY"
     # Be extremely restrictive.
     # https://developers.google.com/web/fundamentals/security/csp/
-    Content-Security-Policy "default-src 'none'; "; block-all-mixed-content"
+    Content-Security-Policy "default-src 'none'; block-all-mixed-content"
     Cache-Control "no-cache, no-store, must-revalidate"
   }
 
