Fix mime for redirector
.tpl was interpreted as application/vnd.groove-tool-template :(

--- a/resources/periph.io.conf
+++ b/resources/periph.io.conf
@@ -57,7 +57,7 @@ periph.io {
   }
 
   rewrite /x/ {
-    to /templates/gopkg.tpl?path={path}&{query}
+    to /templates/gopkg.html?path={path}&{query}
   }
 
   root periph.io/www
@@ -80,5 +80,5 @@ periph.io {
     then docker run --rm -u 1000:1002 -v /var/lib/docker/web/periph.io:/data marcaruel/hugo-tidy:hugo-0.25.1-alpine-3.6-pygments-2.2.0-brotli-0.6.0
   }
 
-  templates /templates/gopkg.tpl
+  templates /templates/gopkg.html
 }
