Upgrade hugo-tidy to hugo-0.40.3-alpine-3.7-brotli-1.0.4

--- a/resources/periph.io.conf
+++ b/resources/periph.io.conf
@@ -77,7 +77,7 @@ periph.io {
     # See https://github.com/maruel/hugo-tidy#usage
     #
     # https://hub.docker.com/r/marcaruel/hugo-tidy/tags/
-    then docker run --rm -u 1000:1002 -v /var/lib/docker/web/periph.io:/data marcaruel/hugo-tidy:hugo-0.26-alpine-3.6-pygments-2.2.0-brotli-0.6.0
+    then docker run --rm -u 1000:1002 -v /var/lib/docker/web/periph.io:/data marcaruel/hugo-tidy:hugo-0.40.3-alpine-3.7-brotli-1.0.4
   }
 
   templates /templates/gopkg.html
