--- a/resources/alt1.periph.io.conf
+++ b/resources/alt1.periph.io.conf
@@ -1,31 +1,14 @@
-# Meant to be run on GCE with
-# https://cloud.google.com/container-optimized-os/docs/
-#
+# Meant to be run on a local machine.
 # See https://caddyserver.com/docs for more information.
 
-# Redirect to naked.
-www.periph.io {
-  log / logs/www.periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
+# Implements the git poller.
+alt1.periph.io {
+  log / /var/log/caddy/alt1.periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
     rotate_size 100 # Rotate after 100 MB
     rotate_age  120 # Keep log files for 120 days
     rotate_keep 100 # Keep at most 100 log files
   }
-  errors logs/www.periph.io.err {
-    rotate_size 100 # Rotate after 100 MB
-    rotate_age  120 # Keep log files for 120 days
-    rotate_keep 100 # Keep at most 100 log files
-  }
-  redir / https://periph.io{uri} 307
-}
-
-# Doesn't implement the git poller, the altX host do for proper redundancy.
-periph.io {
-  log / logs/periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
-    rotate_size 100 # Rotate after 100 MB
-    rotate_age  120 # Keep log files for 120 days
-    rotate_keep 100 # Keep at most 100 log files
-  }
-  errors logs/periph.io.err {
+  errors /var/log/caddy/alt1.periph.io.err {
     rotate_size 100 # Rotate after 100 MB
     rotate_age  120 # Keep log files for 120 days
     rotate_keep 100 # Keep at most 100 log files
@@ -65,6 +48,25 @@ periph.io {
   }
 
   root periph.io/www
+
+  git {
+    repo https://github.com/periph/website
+    path ../
+    # No need to poll with a hook:
+    interval -1
+    hook /api/update/website <ADD SECRET HERE>
+    # It takes less than 2 seconds to complete so do it inline.
+    #
+    # $(id -g) cannot be used here. 33 is www-data. 1000 is the first user
+    # account
+    # TODO(maruel): This is brittle!
+    #
+    # Path given to -v must be absolute, not relative.
+    # See https://github.com/maruel/hugo-tidy#usage
+    #
+    # https://hub.docker.com/r/marcaruel/hugo-tidy/tags/
+    then docker run --rm -u 33:1000 -v /etc/caddy/periph.io:/data marcaruel/hugo-tidy:hugo-0.40.3-alpine-3.7-brotli-1.0.4
+  }
 
   templates /templates/gopkg.html
 }
