news/2018/drive: discuss new drive functionality
Add support for custom image.

--- a/site/config.toml
+++ b/site/config.toml
@@ -2,3 +2,6 @@ baseURL = "https://periph.io/"
 pygmentsuseclasses = true
 PygmentsCodeFences = true
 disableKinds = ["RSS"]
+
+[params]
+  image = "https://periph.io/img/periph-mascot-fb.png"
