resources: update hugo-tidy version in caddy config files.
- Update the caddy config files
- Add note to not forget to update the other places where the hugo-tidy version
  is hardcoded.

--- a/resources/alt2.periph.io.conf
+++ b/resources/alt2.periph.io.conf
@@ -66,7 +66,9 @@ alt2.periph.io {
     # See https://github.com/maruel/hugo-tidy#usage
     #
     # https://hub.docker.com/r/marcaruel/hugo-tidy/tags/
-    then docker run --rm -u 1000:1002 -v /var/lib/docker/web/periph.io:/data marcaruel/hugo-tidy:hugo-0.40.3-alpine-3.7-brotli-1.0.4
+    #
+    # Don't forget to update ../gen.sh and ../serve.sh.
+    then docker run --rm -u 1000:1002 -v /var/lib/docker/web/periph.io:/data marcaruel/hugo-tidy:hugo-0.42.2-alpine-3.7-brotli-1.0.5-minify-2.3.5
   }
 
   templates /templates/gopkg.html
