--- a/resources/alt1.periph.io.conf
+++ b/resources/alt1.periph.io.conf
@@ -65,7 +65,9 @@ alt1.periph.io {
     # See https://github.com/maruel/hugo-tidy#usage
     #
     # https://hub.docker.com/r/marcaruel/hugo-tidy/tags/
-    then docker run --rm -u 33:1000 -v /etc/caddy/periph.io:/data marcaruel/hugo-tidy:hugo-0.40.3-alpine-3.7-brotli-1.0.4
+    #
+    # Don't forget to update ../gen.sh and ../serve.sh.
+    then docker run --rm -u 33:1000 -v /etc/caddy/periph.io:/data marcaruel/hugo-tidy:hugo-0.42.2-alpine-3.7-brotli-1.0.5-minify-2.3.5
   }
 
   templates /templates/gopkg.html
