Make the hugo-tidy update seamless
Use the tag, but don't let it fetch any random image.
Bump to hugo-0.57.2-alpine-3.10.2-brotli-1.0.7-minify-2.5.1
This version uses --buildFuture

--- a/resources/alt2.periph.io.conf
+++ b/resources/alt2.periph.io.conf
@@ -64,11 +64,7 @@ alt2.periph.io {
     #
     # Path given to -v must be absolute, not relative.
     # See https://github.com/maruel/hugo-tidy#usage
-    #
-    # https://hub.docker.com/r/marcaruel/hugo-tidy/tags/
-    #
-    # Don't forget to update ../gen.sh and ../serve.sh.
-    then docker run --rm -u 1000:1002 -v /var/lib/docker/web/periph.io:/data marcaruel/hugo-tidy:hugo-0.56.1-alpine-3.10.1-brotli-1.0.7-minify-2.5.1
+    then bash -c "docker run --rm -u 1000:1002 -v \"$(realpath .):/data\" \"marcaruel/hugo-tidy:$(cat tag)\""
   }
 
   templates /templates/gopkg.html
