site/config.toml: start preparing for hugo upgrade
Hugo changed a lot between 0.59 and 0.74 so the configuration will have to be updated.

--- a/site/config.toml
+++ b/site/config.toml
@@ -1,6 +1,15 @@
+# https://gohugo.io/getting-started/configuration/
+
+# URL handling.
 baseURL = "https://periph.io/"
+canonifyurls = false
+
+
+# Syntax coloring.
 pygmentsuseclasses = true
 PygmentsCodeFences = true
+
+
 disableKinds = ["RSS"]
 
 [params]
