--- a/resources/alt1.periph.io.conf
+++ b/resources/alt1.periph.io.conf
@@ -30,7 +30,7 @@ alt1.periph.io {
     # - Edge ignores block-all-mixed-content.
     # - Edge (as of 2017-03-19) only supports CSP1 so it doesn't support sha256
     #   whitelist.
-    Content-Security-Policy "default-src 'self'; child-src ghbtns.com www.youtube.com; frame-src data: ghbtns.com www.youtube.com; object-src 'none'; style-src 'self' 'unsafe-inline' fonts.googleapis.com; font-src fonts.gstatic.com; script-src 'self' 'unsafe-inline' www.google-analytics.com; img-src 'self' godoc.org www.google-analytics.com stats.g.doubleclick.net; block-all-mixed-content"
+    Content-Security-Policy "default-src 'self'; child-src ghbtns.com www.youtube.com; frame-src data: ghbtns.com www.youtube.com; object-src 'none'; style-src 'self' 'unsafe-inline' fonts.googleapis.com; font-src fonts.gstatic.com; script-src 'self' 'unsafe-inline' www.google-analytics.com; img-src 'self' godoc.org www.google-analytics.com stats.g.doubleclick.net www.google.com; block-all-mixed-content"
     # Tell clients to cache for 1 hour.
     Cache-Control "public, max-age=3600"
   }
