--- a/resources/alt1.periph.io.conf
+++ b/resources/alt1.periph.io.conf
@@ -3,18 +3,15 @@
 
 # Implements the git poller.
 alt1.periph.io {
-  log / /var/log/caddy/alt1.periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
-    rotate_size 100 # Rotate after 100 MB
-    rotate_age  120 # Keep log files for 120 days
-    rotate_keep 100 # Keep at most 100 log files
-  }
-  errors /var/log/caddy/alt1.periph.io.err {
-    rotate_size 100 # Rotate after 100 MB
-    rotate_age  120 # Keep log files for 120 days
-    rotate_keep 100 # Keep at most 100 log files
+  log {
+    output file /var/log/caddy/alt1.periph.io.log {
+      roll_size     100  # Rotate after 100 MB
+      roll_keep_for 120d # Keep log files for 120 days
+      roll_keep     100  # Keep at most 100 log files
+    }
   }
 
-  header / {
+  header {
     # Enable HTTP Strict Transport Security (HSTS) to force clients to always
     # connect via HTTPS (do not use if only testing)
     Strict-Transport-Security "max-age=31536000; includeSubDomains"
@@ -35,36 +32,53 @@ alt1.periph.io {
     Cache-Control "public, max-age=3600"
   }
 
-  header /x/ {
-    # TODO(maruel): Work around a bug in the way the template is processed,
-    # which causes the files to be downloaded due to Content-Type:
-    # application/gzip.
-    Content-Disposition "inline"
-    Content-Type "text/html; charset=utf-8"
+  @rickroll {
+    path /.env /wp-admin /wp-login.php /xmlrpc.php
+  }
+  handle @rickroll {
+    redir https://www.youtube.com/watch?v=dQw4w9WgXcQ
   }
 
-  rewrite /x/ {
-    to /templates/gopkg.html?path={path}&{query}
+  @github {
+    path /api/update/website
+    header_regexp X-Hub-Signature "[a-z0-9]+\=([a-z0-9]+)"
+  }
+  @hmac {
+    expression {hmac.signature} == {http.regexp.1}
+  }
+  @branch {
+    expression {json.ref}.endsWith('/master')
+  }
+  route @github {
+    hmac sha1 "<ADD SECRET HERE>"
+    route @hmac {
+      json_parse
+      # Don't forget to put the key in /var/www/.ssh/id_ed25519
+      exec @branch {
+        # It takes less than 2 seconds to complete so do it inline.
+        foreground
+        timeout 60s
+        # This assumes the repository is already checked out at ./periph.io
+        # git clone https://github.com/periph/website periph.io
+        directory periph.io
+        # $(id -g) cannot be used here. 33 is www-data. 1000 is the first user
+        # account
+        # TODO(maruel): This is brittle!
+        #
+        # Path given to -v must be absolute, not relative.
+        # See https://github.com/maruel/hugo-tidy#usage
+        #
+        # https://hub.docker.com/r/marcaruel/hugo-tidy/tags/
+        command bash
+        args -c "git fetch && git reset --hard && git checkout origin/master --force && docker run --rm -u 33:1000 -v \"$(realpath .):/data\" \"marcaruel/hugo-tidy:$(cat tag)\""
+      }
+    }
   }
 
   root periph.io/www
-
-  git {
-    repo https://github.com/periph/website
-    path ../
-    # No need to poll with a hook:
-    interval -1
-    hook /api/update/website <ADD SECRET HERE>
-    # It takes less than 2 seconds to complete so do it inline.
-    #
-    # $(id -g) cannot be used here. 33 is www-data. 1000 is the first user
-    # account
-    # TODO(maruel): This is brittle!
-    #
-    # Path given to -v must be absolute, not relative.
-    # See https://github.com/maruel/hugo-tidy#usage
-    then bash -c "docker run --rm -u 33:1000 -v \"$(realpath .):/data\" \"marcaruel/hugo-tidy:$(cat tag)\""
+  handle /x/* {
+    rewrite templates/gopkg.html?path={path}&{query}
+    templates
   }
-
-  templates /templates/gopkg.html
+  file_server
 }
