--- a/resources/ci.periph.io.conf
+++ b/resources/ci.periph.io.conf
@@ -2,18 +2,15 @@
 # See https://caddyserver.com/docs for more information.
 
 ci.periph.io {
-  log / /var/log/caddy/ci.periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
-    rotate_size 100 # Rotate after 100 MB
-    rotate_age  120 # Keep log files for 120 days
-    rotate_keep 100 # Keep at most 100 log files
-  }
-  errors /var/log/caddy/ci.periph.io.err {
-    rotate_size 100 # Rotate after 100 MB
-    rotate_age  120 # Keep log files for 120 days
-    rotate_keep 100 # Keep at most 100 log files
+  log {
+    output file /var/log/caddy/ci.periph.io.log {
+      roll_size     100  # Rotate after 100 MB
+      roll_keep_for 120d # Keep log files for 120 days
+      roll_keep     100  # Keep at most 100 log files
+    }
   }
 
-  header / {
+  header {
     # Enable HTTP Strict Transport Security (HSTS) to force clients to always
     # connect via HTTPS (do not use if only testing)
     Strict-Transport-Security "max-age=31536000;"
@@ -29,9 +26,16 @@ ci.periph.io {
     Cache-Control "no-cache, no-store, must-revalidate"
   }
 
-  # webhooks for gohci look like this.
-  #proxy /github/periph/device 127.0.0.1:1234 {
-  #  transparent
-  #  without /github/periph/device
+  @rickroll {
+    path /.env /wp-admin /wp-login.php /xmlrpc.php
+  }
+  handle @rickroll {
+    redir https://www.youtube.com/watch?v=dQw4w9WgXcQ
+  }
+
+  # handle_path /gohci/<device> {
+  #  reverse_proxy <ip>:<port>
   #}
+
+  respond "Maybe next time" 200
 }
