--- a/resources/periph.io.conf
+++ b/resources/periph.io.conf
@@ -5,33 +5,27 @@
 
 # Redirect to naked.
 www.periph.io {
-  log / logs/www.periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
-    rotate_size 100 # Rotate after 100 MB
-    rotate_age  120 # Keep log files for 120 days
-    rotate_keep 100 # Keep at most 100 log files
+  log {
+    output file logs/www.periph.io.log {
+      roll_size     100  # Rotate after 100 MB
+      roll_keep_for 120d # Keep log files for 120 days
+      roll_keep     100  # Keep at most 100 log files
+    }
   }
-  errors logs/www.periph.io.err {
-    rotate_size 100 # Rotate after 100 MB
-    rotate_age  120 # Keep log files for 120 days
-    rotate_keep 100 # Keep at most 100 log files
-  }
-  redir / https://periph.io{uri} 307
+  redir https://periph.io{uri} 307
 }
 
 # Doesn't implement the git poller, the altX host do for proper redundancy.
 periph.io {
-  log / logs/periph.io.log "{when} {status} {remote} {method} {latency} {size} {uri} {>Referer} {>User-Agent}" {
-    rotate_size 100 # Rotate after 100 MB
-    rotate_age  120 # Keep log files for 120 days
-    rotate_keep 100 # Keep at most 100 log files
-  }
-  errors logs/periph.io.err {
-    rotate_size 100 # Rotate after 100 MB
-    rotate_age  120 # Keep log files for 120 days
-    rotate_keep 100 # Keep at most 100 log files
+  log {
+    output file logs/periph.io.log {
+      roll_size     100  # Rotate after 100 MB
+      roll_keep_for 120d # Keep log files for 120 days
+      roll_keep     100  # Keep at most 100 log files
+    }
   }
 
-  header / {
+  header {
     # Enable HTTP Strict Transport Security (HSTS) to force clients to always
     # connect via HTTPS (do not use if only testing)
     Strict-Transport-Security "max-age=31536000; includeSubDomains"
@@ -52,19 +46,17 @@ periph.io {
     Cache-Control "public, max-age=3600"
   }
 
-  header /x/ {
-    # TODO(maruel): Work around a bug in the way the template is processed,
-    # which causes the files to be downloaded due to Content-Type:
-    # application/gzip.
-    Content-Disposition "inline"
-    Content-Type "text/html; charset=utf-8"
+  @rickroll {
+    path /.env /wp-admin /wp-login.php /xmlrpc.php
   }
-
-  rewrite /x/ {
-    to /templates/gopkg.html?path={path}&{query}
+  handle @rickroll {
+    redir https://www.youtube.com/watch?v=dQw4w9WgXcQ
   }
 
   root periph.io/www
-
-  templates /templates/gopkg.html
+  handle /x/* {
+    rewrite templates/gopkg.html?path={path}&{query}
+    templates
+  }
+  file_server
 }
