Migrate most stuff from master to main

--- a/resources/alt1.periph.io.conf
+++ b/resources/alt1.periph.io.conf
@@ -47,7 +47,7 @@ alt1.periph.io {
     expression {hmac.signature} == {http.regexp.1}
   }
   @branch {
-    expression {json.ref}.endsWith('/master')
+    expression {json.ref}.endsWith('/main')
   }
   route @github {
     hmac sha1 "<ADD SECRET HERE>"
@@ -69,7 +69,7 @@ alt1.periph.io {
         #
         # https://hub.docker.com/r/marcaruel/hugo-tidy/tags/
         command bash
-        args -c "git fetch && git reset --hard && git checkout origin/master --force && docker run --rm -u 33:1000 -v \"$(realpath .):/data\" \"marcaruel/hugo-tidy:$(cat tag)\""
+        args -c "git fetch && git reset --hard && git checkout origin/main --force && docker run --rm -u 33:1000 -v \"$(realpath .):/data\" \"marcaruel/hugo-tidy:$(cat tag)\""
       }
     }
   }
