Use tick multi-lines for github webhook exec > > Makes it much more readable.

--- a/resources/alt1.periph.io.conf
+++ b/resources/alt1.periph.io.conf
@@ -69,7 +69,10 @@ alt1.periph.io {
         #
         # https://hub.docker.com/r/marcaruel/hugo-tidy/tags/
         command bash
-        args -c "git fetch && git reset --hard && git checkout origin/main --force && docker run --rm -u 33:1000 -v \"$(realpath .):/data\" \"marcaruel/hugo-tidy:$(cat tag)\""
+        args -c `git fetch &&
+            git reset --hard &&
+            git checkout origin/main --force &&
+            docker run --rm -u 33:1000 -v "$(realpath .):/data" "marcaruel/hugo-tidy:$(cat tag)"`
       }
     }
   }
