--- a/resources/alt2.periph.io.conf
+++ b/resources/alt2.periph.io.conf
@@ -70,7 +70,10 @@ alt2.periph.io {
         #
         # https://hub.docker.com/r/marcaruel/hugo-tidy/tags/
         command bash
-        args -c "git fetch && git reset --hard && git checkout origin/main --force && docker run --rm -u 1000:1002 -v \"$(realpath .):/data\" \"marcaruel/hugo-tidy:$(cat tag)\""
+        args -c `git fetch &&
+            git reset --hard &&
+            git checkout origin/main --force &&
+            docker run --rm -u 1000:1002 -v "$(realpath .):/data" "marcaruel/hugo-tidy:$(cat tag)"`
       }
     }
   }
