Make website compatible with recent hugo

--- a/site/config.toml
+++ b/site/config.toml
@@ -4,13 +4,15 @@
 baseURL = "https://periph.io/"
 canonifyurls = false
 
-
-# Syntax coloring.
-pygmentsuseclasses = true
-PygmentsCodeFences = true
-
-
 disableKinds = ["RSS"]
+
+[markup]
+  [markup.highlight]
+    codeFences = true
+    useClasses = true
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
 
 [params]
   image = "https://periph.io/img/periph-mascot-fb.png"
